# turtlebot3_skillset

./: Navigation2 STack.md  ONERA Robot Skills.md  README.md  imgui.ini  requirements.txt  turtlebot.json  turtlebot.rl
tb3_skillset/: CMakeLists.txt  package.xml
tb3_skillset/include/: Node.hpp  TurtlebotSkillsetNode.hpp
tb3_skillset/launch/: tb3_skillset.launch.py
tb3_skillset/src/: Node.cpp  tb3_skillset_node.cpp
turtlebot_skillset/: CMakeLists.txt  package.xml
turtlebot_skillset/include/turtlebot_skillset/: Node.hpp  NodeDebug.hpp  Resource.hpp
turtlebot_skillset/src/: Data.cpp  Event.cpp  Node.cpp  NodeDebug.cpp  Resource.cpp  Skill.cpp  turtlebot_node.cpp
turtlebot_skillset_client_py/: CMakeLists.txt  package.xml
turtlebot_skillset_client_py/turtlebot_skillset_client/: __init__.py  client.py  data.py  events.py  resources.py  skills.py
turtlebot_skillset_gui_widgets/: CMakeLists.txt  package.xml
turtlebot_skillset_gui_widgets/include/turtlebot_skillset_gui_widgets/: client.hpp  widget.hpp
turtlebot_skillset_gui_widgets/src/: client.cpp  main.cpp  widget.cpp
turtlebot_skillset_interfaces/: CMakeLists.txt  package.xml
turtlebot_skillset_interfaces/msg/: DataCurrentpose.msg  DataCurrentposeResponse.msg  SkillGetHomeInput.msg  SkillGetHomeRequest.msg  SkillGetHomeResponse.msg  SkillGetHomeStatus.msg  SkillGoToInput.msg  SkillGoToProgress.msg  SkillGoToRequest.msg  SkillGoToResponse.msg  SkillGoToStatus.msg  SkillsetStatus.msg
